<resources>
    <string name="app_name">WES Food</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="notification">Notification</string>
    <string name="ingredient">ingredient</string>
    <string name="preparation">preparation</string>
    <string name="comment">comment</string>
    <string name="time">time</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author_john_smith">Author: John Smith</string>
    <string name="spinach_38_chicken_salad"><![CDATA[Spinach & chickken salad]]></string>
    <string name="spinach">Spinach</string>
    <string name="today">Today</string>
    <string name="favorite">Favorite</string>
    <string name="foods">Foods</string>
    <string name="profile">Profile</string>
    <string name="allen_lee">Allen lee</string>
    <string name="type">Type</string>
    <string name="ordinary">Ordinary</string>
    <string name="expiry">Expiry Day</string>
    <string name="number">341</string>
    <string name="number_fllower">302,322</string>
    <string name="fllower">Fllower</string>
    <string name="favorites">Favorites</string>
    <string name="about_us">About us</string>
    <string name="setting">Setting</string>
    <string name="setting_meal">Setting meal</string>
    <string name="breakfast_time">Breakfast time</string>
    <string name="time_breakfast">08:30</string>
    <string name="lunch_time">Lunch time</string>
    <string name="time_lunch">12:00</string>
    <string name="dinner_time">Dinner time</string>
    <string name="time_dinner">18:30</string>
    <string name="popular">Popular</string>
    <string name="news">News</string>
    <string name="more">more</string>
    <string name="add">add</string>
    <string name="text_three_people">Bữa ăn dành cho: 3 người</string>
    <string name="text_six_people">Bữa ăn cho: 6 người</string>
    <string name="configuration_meal">Configuration meal</string>
    <string name="three_six">3</string>
    <string name="number_of_people">Number of people</string>
    <string name="main_course">Main course</string>
    <string name="meals">Meals</string>
    <string name="khau_phan">Bữa ăn dành cho:</string>
    <string name="Meal">Bữa ăn dành cho: %s người</string>
    <string name="done">Done</string>
    <string name="breakfasts">Breakfasts</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="todo">TODO</string>
</resources>
