<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/primary_background"
    android:layout_height="match_parent"
    tools:context="com.wes.app.ui.screens.settingprofile.done.SettingProflieFragment">
    <LinearLayout
        android:padding="16dp"
        android:id="@+id/relativeFood"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_meal"
            android:textStyle="bold"
            android:textColor="@color/text_detail"
            android:textSize="@dimen/text_autor_detail"/>
    </LinearLayout>
    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/text_detail_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/breakfast_time"
            android:textSize="@dimen/text_autor_detail"/>
        <TextView
            android:textColor="@color/text_detail_two"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_autor_detail"
            android:layout_height="wrap_content"
            android:text="@string/time_breakfast"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#fff"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">
    </LinearLayout>
    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/text_detail_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunch_time"
            android:textSize="@dimen/text_autor_detail"/>
        <TextView
            android:textColor="@color/text_detail_two"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_autor_detail"
            android:layout_height="wrap_content"
            android:text="@string/time_lunch"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#fff"/>
    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/text_detail_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinner_time"
            android:textSize="@dimen/text_autor_detail"/>
        <TextView
            android:textColor="@color/text_detail_two"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_autor_detail"
            android:layout_height="wrap_content"
            android:text="@string/time_dinner"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <LinearLayout
        android:padding="16dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/configuration_meal"
            android:textStyle="bold"
            android:textColor="@color/text_detail"
            android:textSize="@dimen/text_autor_detail"/>
        <LinearLayout
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="RtlHardcoded">
            <TextView
                android:id="@+id/tvAdd"
                android:gravity="center"
                android:layout_width="66dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_tag_orange"
                android:text="@string/add"/>
        </LinearLayout>
    </LinearLayout>
   <androidx.recyclerview.widget.RecyclerView
       android:layout_marginStart="10dp"
       android:layout_marginEnd="10dp"
       android:id="@+id/rcvSetting"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
   </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>