<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_item_home"
    android:background="@color/primary_background"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:id="@+id/lineProfile"
    android:gravity="center"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UseCompoundDrawables">
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/oval"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allen_lee"
        android:textStyle="bold"
        android:textColor="@color/text_detail"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/lineProfileTwo"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@+id/lineProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:baselineAligned="false">
        <LinearLayout
            android:padding="15dp"
            android:background="@drawable/bg_tag_tangerine"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:textColor="@color/text_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="12sp"/>
            <TextView
                android:gravity="center"
                android:textColor="@color/text_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ordinary"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:padding="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/bg_tag_bright_blue"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:textColor="@color/text_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expiry"
                android:textSize="12sp"/>
            <TextView
                android:gravity="center"
                android:textColor="@color/text_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:padding="15dp"
            android:background="@drawable/bg_tag_yellow"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:textColor="@color/text_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fllower"
                android:textSize="12sp"/>
            <TextView
                android:gravity="center"
                android:textColor="@color/text_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_fllower"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
        <RelativeLayout
            android:id="@+id/reFavorite"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:background="@drawable/bg_tag_white"
            android:orientation="horizontal"
            android:layout_below="@+id/lineProfileTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorites"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                android:textColor="@color/text_color_profile"
                android:layout_marginStart="30dp"
                tools:ignore="RelativeOverlap" />
            <ImageView
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next"
                android:layout_alignParentEnd="true"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/reAbout"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:background="@drawable/bg_tag_white"
        android:orientation="horizontal"
        android:layout_below="@+id/reFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_oval"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textColor="@color/text_color_profile"
            android:layout_marginStart="30dp"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_alignParentEnd="true"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/reSetting"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:background="@drawable/bg_tag_white"
        android:orientation="horizontal"
        android:layout_below="@+id/reAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tugiac"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/text_color_profile"
            android:layout_marginStart="30dp"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_alignParentEnd="true"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
</RelativeLayout>