<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#101F30"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wes.app.ui.screens.details.view.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imBitmapitemhome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/bitmap" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/dish_trans"
            app:layout_constraintBottom_toBottomOf="@+id/imBitmapitemhome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imBitmapitemhome" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_details"
        android:id="@+id/tvFoodDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:gravity="center"
        android:text="@string/spinach_38_chicken_salad"
        android:textColor="@color/text_detail"
        android:textSize="@dimen/text_food_detail" />

    <TextView
        android:layout_marginTop="@dimen/margin_details"
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFoodDetail"
        android:gravity="center"
        android:text="@string/author_john_smith"
        android:textColor="@color/text_detail_two"
        android:textSize="@dimen/text_autor_detail" />
    <LinearLayout
        android:padding="@dimen/padding_item_home"
        android:background="#0B1723"
        android:layout_marginTop="@dimen/margin_details"
        android:id="@+id/line"
        android:layout_below="@+id/tvAuthor"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent" >
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/min"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25 min"
                android:textColor="@color/text_detail_two"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent" >
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/people"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="For 3 people"
                android:textColor="@color/text_detail_two"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent" >
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/easy"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Easy"
                android:textColor="@color/text_detail_two"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:background="#0B1723"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextColor="@color/text_detail_two">
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:padding="20dp"
        android:layout_below="@+id/tabMode"
        android:id="@+id/visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>
